# cpp-cuda-py-torch-mlir

./: .gitignore  README.md
LLM/SD/: README.md
cpp/cmake/: pip or conda install cmake.md
cpp/cuda_mock/: DT_RELA DT_JUMPREL difference.md  notes on cuda_mock.md
cpp/gdb/: symbol belongs to which shared library.md
cpp/private/: README.md  main.cpp  makefile  print_class_pointer.cpp
cpp/restrict/: README.md  main.cpp
cpp/rpath/: README.md
cuda/NCCL/: README.md  benchmark_NCCL_compile_mpi_and_nccl-tests.md  compute-communication-overlap.md
cuda/scripts/: README.md  block_limit_per_sm.cu  block_limit_per_sm.sh  block_schedule.cu  makefile
distributed/SimAI/: paper.md
distributed/gradient-accumulation-fusion/: README.md  gradient_accumulation_with_contiguous_buffer.md
distributed/pp-tp-dp如何划分group/: query.py
python/argparse/: README.sh  store_true_false.py  store_true_false.sh
python/args_align/: README.md  a1.txt  a2.txt  main.py
python/cProfile/: README.md
python/entry_points/: README.md  pyproject.toml  use_entry_points.py
python/entry_points/src/pyproject_example/: hello.py
python/gc/: README.md
python/py-spy_madbg_usage/: README.md
pytorch/: How_pytorch_link_NCCL.md  New_distributed_backend.md
pytorch/AccumulateGrad/: README.md
pytorch/argmax/: README.md
pytorch/caching_allocator/: README.md  profile.cpp
pytorch/contribute/: mkl.md  nightly_build.md
pytorch/cudastream/: nsys_wait_stream.md
pytorch/develop/: 000-mps_doc.md  001-any&all_segfault.md  002-bfloat16_operator<<.md
pytorch/empty_strided/: README.md
(+33 files in other folders)
